Revision history for {{$dist->name}}

{{$NEXT}}

0.002     2014-05-03 22:57:44Z
          - bump declared prereq on CPAN::Meta::Prereqs

0.001     2014-04-26 22:39:39Z
          - Initial release.